--- a/public/css/market.css
+++ b/public/css/market.css
@@ -3,7 +3,76 @@
 .navbar-brand {
 	font-family: 'Poppins', sans-serif;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+body {
+	font-family: 'Poppins', sans-serif;
+	background-color: #e6f5f3;
+}
+
+.nav-item a {
+	text-decoration: none;
+	color: white;
+}
+
+.nav-link {
+	color: black;
+}
+
+
+.form-control {
+	font-size: 14px;
+}
+
+@media screen and (min-width: 994px) {
+.form-control {
+	width: 350px;
+}
+}
+
+@media screen and (max-width: 994px) {
+.navbar-nav {
+	text-align: center;
+}
+}
+
+
+.btn {
+	background-color: #42f54e;
+	border-radius: 10px;
+}
+
+.btn:hover {
+	background-color: #69f573;
+}
+
+.btn {
+	color: white;
+}
+
+/* Kategori */
+.foto-kategori {
+	width: 50px;
+
+}
+
+.foto-kategori:hover {
+	transform: scale(1.2);
+	transition: 0.3s;
+}
+
+.row-container {
+	background-color: white;
+	margin: 0px;
+}
+/* End Kategori*/
+
+/* Produk */
+.card:hover {
+	border: 1px solid #faaa5f;
+	transition: 0.5s;
+}
+/* End Produk*/
 .nav-item a {
 	text-decoration: none;
 	color: white;
